currency service implementation